# homebrew-ducktape

./: .gitignore  README.md  brew-install.sh  config.toml  create-release.sh  ducktape.rb  fix-changelog.sh  fix-sha.sh  full-release-process.sh  full-update-process.sh  quick-release.sh  update-dev.sh  update-formula.sh  update-prod.sh  update-public-brew.sh  update-version.sh
ducktape-0.16.5/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .release-it.json  .releaserc  CHANGELOG.md  CODE_CONTRIBUTING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.toml  config.toml.bak  deny.toml  renovate.json  run-integration-tests.sh  rustfmt.toml  security-check.sh  setup-security-checks.sh
ducktape-0.16.5/.cargo/: audit.toml
ducktape-0.16.5/.github/: calendar.md  copilot-instructions.md  dependabot.yml  gitleaks.toml  pull_request_template.md  stale.yml
ducktape-0.16.5/.github/ISSUE_TEMPLATE/: bug_report.md  (+3 more)
ducktape-0.16.5/benches/: benchmark.rs
ducktape-0.16.5/docs/: api-reference.md  development.md  performance.md  websocket-api.md
ducktape-0.16.5/hooks/: pre-commit
ducktape-0.16.5/src/: api_docs.json  api_keys.rs  api_server.rs.bak  app.rs  calendar.rs  cli.rs  command_parser.rs  command_processor.rs  config.rs  contact_groups.rs  deepseek_parser.rs  env_debug.rs  env_loader.rs  env_manager.rs  env_store.rs  event_search.rs  file_search.rs  grok_parser.rs  lib.rs  main.rs  openai_parser.rs  output_capture.rs  parser_reexport.rs  parser_trait.rs  reminders.rs  security.rs  state.rs  terminal_parser.rs  validation.rs  zoom.rs
ducktape-0.16.5/tests/: command_args_tests.rs  integration_calendar_test.rs  integration_config_test.rs  integration_event_import_test.rs  integration_test.rs  parser_integration_test.rs  quoted_args_test.rs
(+52 files in other folders)
